@@ -26,10 +26,8 @@ import static org.junit.Assert.fail;
 import com.esotericsoftware.kryo.Kryo;
 import com.esotericsoftware.kryo.io.Input;
 import com.esotericsoftware.kryo.io.Output;
-import com.google.common.io.ByteStreams;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.util.ArrayList;
@@ -60,6 +58,7 @@ import org.apache.avro.util.Utf8;
 import org.apache.beam.sdk.coders.Coder.Context;
 import org.apache.beam.sdk.coders.Coder.NonDeterministicException;
 import org.apache.beam.sdk.testing.CoderProperties;
+import org.apache.beam.sdk.testing.InterceptingUrlClassLoader;
 import org.apache.beam.sdk.testing.NeedsRunner;
 import org.apache.beam.sdk.testing.PAssert;
 import org.apache.beam.sdk.testing.TestPipeline;
@@ -94,8 +93,7 @@ public class AvroCoderTest {
 
     // Empty constructor required for Avro decoding.
     @SuppressWarnings("unused")
-    public Pojo() {
-    }
+    public Pojo() {}
 
     public Pojo(String text, int count) {
       this.text = text;
@@ -117,9 +115,7 @@ public class AvroCoderTest {
       if (count != pojo.count) {
         return false;
       }
-      if (text != null
-          ? !text.equals(pojo.text)
-          : pojo.text != null) {
+      if (text != null ? !text.equals(pojo.text) : pojo.text != null) {
         return false;
       }
 
@@ -133,10 +129,7 @@ public class AvroCoderTest {
 
     @Override
     public String toString() {
-      return "Pojo{"
-          + "text='" + text + '\''
-          + ", count=" + count
-          + '}';
+      return "Pojo{" + "text='" + text + '\'' + ", count=" + count + '}';
     }
   }
 
@@ -147,8 +140,7 @@ public class AvroCoderTest {
     }
   }
 
-  @Rule
-  public TestPipeline pipeline = TestPipeline.create();
+  @Rule public TestPipeline pipeline = TestPipeline.create();
 
   @Test
   public void testAvroCoderEncoding() throws Exception {
@@ -166,42 +158,16 @@ public class AvroCoderTest {
   }
 
   /**
-   * A classloader that intercepts loading of Pojo and makes a new one.
-   */
-  private static class InterceptingUrlClassLoader extends ClassLoader {
-
-    private InterceptingUrlClassLoader(ClassLoader parent) {
-      super(parent);
-    }
-
-    @Override
-    public Class<?> loadClass(String name) throws ClassNotFoundException {
-      if (name.equals(AvroCoderTestPojo.class.getName())) {
-        // Quite a hack?
-        try {
-          String classAsResource = name.replace('.', '/') + ".class";
-          byte[] classBytes =
-              ByteStreams.toByteArray(getParent().getResourceAsStream(classAsResource));
-          return defineClass(name, classBytes, 0, classBytes.length);
-        } catch (IOException e) {
-          throw new RuntimeException(e);
-        }
-      } else {
-        return getParent().loadClass(name);
-      }
-    }
-  }
-
-  /**
-   * Tests that {@link AvroCoder} works around issues in Avro where cache classes might be
-   * from the wrong ClassLoader, causing confusing "Cannot cast X to X" error messages.
+   * Tests that {@link AvroCoder} works around issues in Avro where cache classes might be from the
+   * wrong ClassLoader, causing confusing "Cannot cast X to X" error messages.
    */
   @Test
   public void testTwoClassLoaders() throws Exception {
+    ClassLoader contextClassLoader = Thread.currentThread().getContextClassLoader();
     ClassLoader loader1 =
-        new InterceptingUrlClassLoader(Thread.currentThread().getContextClassLoader());
+        new InterceptingUrlClassLoader(contextClassLoader, AvroCoderTestPojo.class.getName());
     ClassLoader loader2 =
-        new InterceptingUrlClassLoader(Thread.currentThread().getContextClassLoader());
+        new InterceptingUrlClassLoader(contextClassLoader, AvroCoderTestPojo.class.getName());
 
     Class<?> pojoClass1 = loader1.loadClass(AvroCoderTestPojo.class.getName());
     Class<?> pojoClass2 = loader2.loadClass(AvroCoderTestPojo.class.getName());
@@ -224,9 +190,6 @@ public class AvroCoderTest {
 
     Object cloned1 = CoderUtils.clone(avroCoder1, pojo1);
     Object cloned2 = CoderUtils.clone(avroCoder2, pojo2);
-
-    Class<?> class1 = cloned1.getClass();
-    Class<?> class2 = cloned2.getClass();
 
     // Confirming that the uncorrupted coder is fine
     pojoClass1.cast(cloned1);
@@ -260,8 +223,7 @@ public class AvroCoderTest {
   }
 
   /**
-   * Confirm that we can serialize and deserialize an AvroCoder object using Kryo.
-   * (BEAM-626).
+   * Confirm that we can serialize and deserialize an AvroCoder object using Kryo. (BEAM-626).
    *
    * @throws Exception
    */
@@ -315,14 +277,14 @@ public class AvroCoderTest {
   public void testGenericRecordEncoding() throws Exception {
     String schemaString =
         "{\"namespace\": \"example.avro\",\n"
-      + " \"type\": \"record\",\n"
-      + " \"name\": \"User\",\n"
-      + " \"fields\": [\n"
-      + "     {\"name\": \"name\", \"type\": \"string\"},\n"
-      + "     {\"name\": \"favorite_number\", \"type\": [\"int\", \"null\"]},\n"
-      + "     {\"name\": \"favorite_color\", \"type\": [\"string\", \"null\"]}\n"
-      + " ]\n"
-      + "}";
+            + " \"type\": \"record\",\n"
+            + " \"name\": \"User\",\n"
+            + " \"fields\": [\n"
+            + "     {\"name\": \"name\", \"type\": \"string\"},\n"
+            + "     {\"name\": \"favorite_number\", \"type\": [\"int\", \"null\"]},\n"
+            + "     {\"name\": \"favorite_color\", \"type\": [\"string\", \"null\"]}\n"
+            + " ]\n"
+            + "}";
     Schema schema = (new Schema.Parser()).parse(schemaString);
 
     GenericRecord before = new GenericData.Record(schema);
@@ -358,7 +320,7 @@ public class AvroCoderTest {
     Assert.assertEquals(before, after);
 
     Integer intAfter = intCoder.decode(inStream, context);
-    Assert.assertEquals(new Integer(10), intAfter);
+    Assert.assertEquals(Integer.valueOf(10), intAfter);
   }
 
   @Test
@@ -367,11 +329,11 @@ public class AvroCoderTest {
     // Use MyRecord as input and output types without explicitly specifying
     // a coder (this uses the default coders, which may not be AvroCoder).
     PCollection<String> output =
-        pipeline.apply(Create.of(new Pojo("hello", 1), new Pojo("world", 2)))
+        pipeline
+            .apply(Create.of(new Pojo("hello", 1), new Pojo("world", 2)))
             .apply(ParDo.of(new GetTextFn()));
 
-    PAssert.that(output)
-        .containsInAnyOrder("hello", "world");
+    PAssert.that(output).containsInAnyOrder("hello", "world");
     pipeline.run();
   }
 
@@ -391,14 +353,13 @@ public class AvroCoderTest {
     }
   }
 
-  private void assertNonDeterministic(AvroCoder<?> coder,
-      Matcher<String> reason1) {
+  private void assertNonDeterministic(AvroCoder<?> coder, Matcher<String> reason1) {
     try {
       coder.verifyDeterministic();
       fail("Expected " + coder + " to be non-deterministic.");
     } catch (NonDeterministicException e) {
-      assertThat(e.getReasons(), Matchers.<String>iterableWithSize(1));
-      assertThat(e.getReasons(), Matchers.<String>contains(reason1));
+      assertThat(e.getReasons(), Matchers.iterableWithSize(1));
+      assertThat(e.getReasons(), Matchers.contains(reason1));
     }
   }
 
@@ -415,10 +376,13 @@ public class AvroCoderTest {
   private static class SimpleDeterministicClass {
     @SuppressWarnings("unused")
     private Integer intField;
+
     @SuppressWarnings("unused")
     private char charField;
+
     @SuppressWarnings("unused")
     private Integer[] intArray;
+
     @SuppressWarnings("unused")
     private Utf8 utf8field;
   }
@@ -437,8 +401,8 @@ public class AvroCoderTest {
     return new TypeSafeMatcher<String>(String.class) {
       @Override
       public void describeTo(Description description) {
-        description.appendText(String.format("Reason starting with '%s:' containing '%s'",
-            prefix, messagePart));
+        description.appendText(
+            String.format("Reason starting with '%s:' containing '%s'", prefix, messagePart));
       }
 
       @Override
@@ -452,15 +416,17 @@ public class AvroCoderTest {
     return reason(clazz.getName(), message);
   }
 
-  private Matcher<String> reasonField(
-      Class<?> clazz, String field, String message) {
+  private Matcher<String> reasonField(Class<?> clazz, String field, String message) {
     return reason(clazz.getName() + "#" + field, message);
   }
 
   @Test
   public void testDeterministicUnorderedMap() {
-    assertNonDeterministic(AvroCoder.of(UnorderedMapClass.class),
-        reasonField(UnorderedMapClass.class, "mapField",
+    assertNonDeterministic(
+        AvroCoder.of(UnorderedMapClass.class),
+        reasonField(
+            UnorderedMapClass.class,
+            "mapField",
             "java.util.Map<java.lang.String, java.lang.String> "
                 + "may not be deterministically ordered"));
   }
@@ -469,23 +435,26 @@ public class AvroCoderTest {
     @SuppressWarnings("unused")
     private UnorderedMapClass[] arrayField;
   }
+
   @Test
   public void testDeterministicNonDeterministicArray() {
-    assertNonDeterministic(AvroCoder.of(NonDeterministicArray.class),
-        reasonField(UnorderedMapClass.class, "mapField",
+    assertNonDeterministic(
+        AvroCoder.of(NonDeterministicArray.class),
+        reasonField(
+            UnorderedMapClass.class,
+            "mapField",
             "java.util.Map<java.lang.String, java.lang.String>"
                 + " may not be deterministically ordered"));
   }
 
   private static class SubclassOfUnorderedMapClass extends UnorderedMapClass {}
 
-
   @Test
   public void testDeterministicNonDeterministicChild() {
     // Super class has non deterministic fields.
-    assertNonDeterministic(AvroCoder.of(SubclassOfUnorderedMapClass.class),
-        reasonField(UnorderedMapClass.class, "mapField",
-            "may not be deterministically ordered"));
+    assertNonDeterministic(
+        AvroCoder.of(SubclassOfUnorderedMapClass.class),
+        reasonField(UnorderedMapClass.class, "mapField", "may not be deterministically ordered"));
   }
 
   private static class SubclassHidingParent extends UnorderedMapClass {
@@ -532,8 +501,11 @@ public class AvroCoderTest {
   @Test
   public void testDeterminismTreeMapValue() {
     // The value is non-deterministic, so we should fail.
-    assertNonDeterministic(AvroCoder.of(TreeMapNonDetValue.class),
-        reasonField(UnorderedMapClass.class, "mapField",
+    assertNonDeterministic(
+        AvroCoder.of(TreeMapNonDetValue.class),
+        reasonField(
+            UnorderedMapClass.class,
+            "mapField",
             "java.util.Map<java.lang.String, java.lang.String> "
                 + "may not be deterministically ordered"));
   }
@@ -546,8 +518,11 @@ public class AvroCoderTest {
   @Test
   public void testDeterminismUnorderedMap() {
     // LinkedHashMap is not deterministically ordered, so we should fail.
-    assertNonDeterministic(AvroCoder.of(LinkedHashMapField.class),
-        reasonField(LinkedHashMapField.class, "nonDeterministicMap",
+    assertNonDeterministic(
+        AvroCoder.of(LinkedHashMapField.class),
+        reasonField(
+            LinkedHashMapField.class,
+            "nonDeterministicMap",
             "java.util.LinkedHashMap<java.lang.String, java.lang.String> "
                 + "may not be deterministically ordered"));
   }
@@ -559,8 +534,11 @@ public class AvroCoderTest {
 
   @Test
   public void testDeterminismCollection() {
-    assertNonDeterministic(AvroCoder.of(StringCollection.class),
-        reasonField(StringCollection.class, "stringCollection",
+    assertNonDeterministic(
+        AvroCoder.of(StringCollection.class),
+        reasonField(
+            StringCollection.class,
+            "stringCollection",
             "java.util.Collection<java.lang.String> may not be deterministically ordered"));
   }
 
@@ -589,12 +567,15 @@ public class AvroCoderTest {
   public void testDeterminismSet() {
     assertDeterministic(AvroCoder.of(StringSortedSet.class));
     assertDeterministic(AvroCoder.of(StringTreeSet.class));
-    assertNonDeterministic(AvroCoder.of(StringHashSet.class),
-        reasonField(StringHashSet.class, "stringCollection",
+    assertNonDeterministic(
+        AvroCoder.of(StringHashSet.class),
+        reasonField(
+            StringHashSet.class,
+            "stringCollection",
             "java.util.HashSet<java.lang.String> may not be deterministically ordered"));
   }
 
-  private static class StringSortedSet{
+  private static class StringSortedSet {
     @SuppressWarnings("unused")
     SortedSet<String> stringCollection;
   }
@@ -611,12 +592,12 @@ public class AvroCoderTest {
 
   @Test
   public void testDeterminismCollectionValue() {
-    assertNonDeterministic(AvroCoder.of(OrderedSetOfNonDetValues.class),
-        reasonField(UnorderedMapClass.class, "mapField",
-            "may not be deterministically ordered"));
-    assertNonDeterministic(AvroCoder.of(ListOfNonDetValues.class),
-        reasonField(UnorderedMapClass.class, "mapField",
-            "may not be deterministically ordered"));
+    assertNonDeterministic(
+        AvroCoder.of(OrderedSetOfNonDetValues.class),
+        reasonField(UnorderedMapClass.class, "mapField", "may not be deterministically ordered"));
+    assertNonDeterministic(
+        AvroCoder.of(ListOfNonDetValues.class),
+        reasonField(UnorderedMapClass.class, "mapField", "may not be deterministically ordered"));
   }
 
   private static class OrderedSetOfNonDetValues {
@@ -632,36 +613,42 @@ public class AvroCoderTest {
   @Test
   public void testDeterminismUnion() {
     assertDeterministic(AvroCoder.of(DeterministicUnionBase.class));
-    assertNonDeterministic(AvroCoder.of(NonDeterministicUnionBase.class),
+    assertNonDeterministic(
+        AvroCoder.of(NonDeterministicUnionBase.class),
         reasonField(UnionCase3.class, "mapField", "may not be deterministically ordered"));
   }
 
   @Test
   public void testDeterminismStringable() {
     assertDeterministic(AvroCoder.of(String.class));
-    assertNonDeterministic(AvroCoder.of(StringableClass.class),
+    assertNonDeterministic(
+        AvroCoder.of(StringableClass.class),
         reasonClass(StringableClass.class, "may not have deterministic #toString()"));
   }
 
   @Stringable
-  private static class StringableClass {
-  }
+  private static class StringableClass {}
 
   @Test
   public void testDeterminismCyclicClass() {
-    assertNonDeterministic(AvroCoder.of(Cyclic.class),
+    assertNonDeterministic(
+        AvroCoder.of(Cyclic.class),
         reasonField(Cyclic.class, "cyclicField", "appears recursively"));
-    assertNonDeterministic(AvroCoder.of(CyclicField.class),
-        reasonField(Cyclic.class, "cyclicField",
-    Cyclic.class.getName() + " appears recursively"));
-    assertNonDeterministic(AvroCoder.of(IndirectCycle1.class),
-        reasonField(IndirectCycle2.class, "field2",
-    IndirectCycle1.class.getName() +  " appears recursively"));
+    assertNonDeterministic(
+        AvroCoder.of(CyclicField.class),
+        reasonField(Cyclic.class, "cyclicField", Cyclic.class.getName() + " appears recursively"));
+    assertNonDeterministic(
+        AvroCoder.of(IndirectCycle1.class),
+        reasonField(
+            IndirectCycle2.class,
+            "field2",
+            IndirectCycle1.class.getName() + " appears recursively"));
   }
 
   private static class Cyclic {
     @SuppressWarnings("unused")
     int intField;
+
     @SuppressWarnings("unused")
     Cyclic cyclicField;
   }
@@ -687,27 +674,31 @@ public class AvroCoderTest {
   }
 
   private static class HasGenericRecord {
-    @AvroSchema("{\"name\": \"bar\", \"type\": \"record\", \"fields\": ["
-        + "{\"name\": \"foo\", \"type\": \"int\"}]}")
+    @AvroSchema(
+        "{\"name\": \"bar\", \"type\": \"record\", \"fields\": ["
+            + "{\"name\": \"foo\", \"type\": \"int\"}]}")
     GenericRecord genericRecord;
   }
 
   @Test
   public void testDeterminismHasCustomSchema() {
-    assertNonDeterministic(AvroCoder.of(HasCustomSchema.class),
-        reasonField(HasCustomSchema.class, "withCustomSchema",
+    assertNonDeterministic(
+        AvroCoder.of(HasCustomSchema.class),
+        reasonField(
+            HasCustomSchema.class,
+            "withCustomSchema",
             "Custom schemas are only supported for subtypes of IndexedRecord."));
   }
 
   private static class HasCustomSchema {
-    @AvroSchema("{\"name\": \"bar\", \"type\": \"record\", \"fields\": ["
-        + "{\"name\": \"foo\", \"type\": \"int\"}]}")
+    @AvroSchema(
+        "{\"name\": \"bar\", \"type\": \"record\", \"fields\": ["
+            + "{\"name\": \"foo\", \"type\": \"int\"}]}")
     int withCustomSchema;
   }
 
   @Test
-  public void testAvroCoderTreeMapDeterminism()
-      throws Exception, NonDeterministicException {
+  public void testAvroCoderTreeMapDeterminism() throws Exception, NonDeterministicException {
     TreeMapField size1 = new TreeMapField();
     TreeMapField size2 = new TreeMapField();
 
@@ -728,20 +719,21 @@ public class AvroCoderTest {
     coder.encode(size1, outStream1, context);
     coder.encode(size2, outStream2, context);
 
-    assertTrue(Arrays.equals(
-        outStream1.toByteArray(), outStream2.toByteArray()));
+    assertTrue(Arrays.equals(outStream1.toByteArray(), outStream2.toByteArray()));
   }
 
   private static class TreeMapField {
     private TreeMap<String, String> field = new TreeMap<>();
   }
 
-  @Union({ UnionCase1.class, UnionCase2.class })
+  @Union({UnionCase1.class, UnionCase2.class})
   private abstract static class DeterministicUnionBase {}
 
-  @Union({ UnionCase1.class, UnionCase2.class, UnionCase3.class })
+  @Union({UnionCase1.class, UnionCase2.class, UnionCase3.class})
   private abstract static class NonDeterministicUnionBase {}
+
   private static class UnionCase1 extends DeterministicUnionBase {}
+
   private static class UnionCase2 extends DeterministicUnionBase {
     @SuppressWarnings("unused")
     String field;
@@ -754,79 +746,155 @@ public class AvroCoderTest {
 
   @Test
   public void testAvroCoderSimpleSchemaDeterminism() {
-    assertDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields()
-        .endRecord()));
-    assertDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields()
-        .name("int").type().intType().noDefault()
-        .endRecord()));
-    assertDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields()
-        .name("string").type().stringType().noDefault()
-        .endRecord()));
+    assertDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields().endRecord()));
+    assertDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("someRecord")
+                .fields()
+                .name("int")
+                .type()
+                .intType()
+                .noDefault()
+                .endRecord()));
+    assertDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("someRecord")
+                .fields()
+                .name("string")
+                .type()
+                .stringType()
+                .noDefault()
+                .endRecord()));
 
-    assertNonDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields()
-        .name("map").type().map().values().stringType().noDefault()
-        .endRecord()),
+    assertNonDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("someRecord")
+                .fields()
+                .name("map")
+                .type()
+                .map()
+                .values()
+                .stringType()
+                .noDefault()
+                .endRecord()),
         reason("someRecord.map", "HashMap to represent MAPs"));
 
-    assertDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields()
-        .name("array").type().array().items().stringType().noDefault()
-        .endRecord()));
+    assertDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("someRecord")
+                .fields()
+                .name("array")
+                .type()
+                .array()
+                .items()
+                .stringType()
+                .noDefault()
+                .endRecord()));
 
-    assertDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields()
-        .name("enum").type().enumeration("anEnum").symbols("s1", "s2").enumDefault("s1")
-        .endRecord()));
+    assertDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("someRecord")
+                .fields()
+                .name("enum")
+                .type()
+                .enumeration("anEnum")
+                .symbols("s1", "s2")
+                .enumDefault("s1")
+                .endRecord()));
 
-    assertDeterministic(AvroCoder.of(SchemaBuilder.unionOf()
-        .intType().and()
-        .record("someRecord").fields().nullableString("someField", "").endRecord()
-        .endUnion()));
+    assertDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.unionOf()
+                .intType()
+                .and()
+                .record("someRecord")
+                .fields()
+                .nullableString("someField", "")
+                .endRecord()
+                .endUnion()));
   }
 
   @Test
   public void testAvroCoderStrings() {
     // Custom Strings in Records
-    assertDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields()
-        .name("string").prop(SpecificData.CLASS_PROP, "java.lang.String")
-        .type().stringType().noDefault()
-        .endRecord()));
-    assertNonDeterministic(AvroCoder.of(SchemaBuilder.record("someRecord").fields()
-        .name("string").prop(SpecificData.CLASS_PROP, "unknownString")
-        .type().stringType().noDefault()
-        .endRecord()),
+    assertDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("someRecord")
+                .fields()
+                .name("string")
+                .prop(SpecificData.CLASS_PROP, "java.lang.String")
+                .type()
+                .stringType()
+                .noDefault()
+                .endRecord()));
+    assertNonDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("someRecord")
+                .fields()
+                .name("string")
+                .prop(SpecificData.CLASS_PROP, "unknownString")
+                .type()
+                .stringType()
+                .noDefault()
+                .endRecord()),
         reason("someRecord.string", "unknownString is not known to be deterministic"));
 
     // Custom Strings in Unions
-    assertNonDeterministic(AvroCoder.of(SchemaBuilder.unionOf()
-        .intType().and()
-        .record("someRecord").fields()
-        .name("someField").prop(SpecificData.CLASS_PROP, "unknownString")
-        .type().stringType().noDefault().endRecord()
-        .endUnion()),
+    assertNonDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.unionOf()
+                .intType()
+                .and()
+                .record("someRecord")
+                .fields()
+                .name("someField")
+                .prop(SpecificData.CLASS_PROP, "unknownString")
+                .type()
+                .stringType()
+                .noDefault()
+                .endRecord()
+                .endUnion()),
         reason("someRecord.someField", "unknownString is not known to be deterministic"));
   }
 
   @Test
   public void testAvroCoderNestedRecords() {
     // Nested Record
-    assertDeterministic(AvroCoder.of(SchemaBuilder.record("nestedRecord").fields()
-        .name("subRecord").type().record("subRecord").fields()
-            .name("innerField").type().stringType().noDefault()
-        .endRecord().noDefault()
-        .endRecord()));
+    assertDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("nestedRecord")
+                .fields()
+                .name("subRecord")
+                .type()
+                .record("subRecord")
+                .fields()
+                .name("innerField")
+                .type()
+                .stringType()
+                .noDefault()
+                .endRecord()
+                .noDefault()
+                .endRecord()));
   }
 
   @Test
   public void testAvroCoderCyclicRecords() {
     // Recursive record
-    assertNonDeterministic(AvroCoder.of(SchemaBuilder.record("cyclicRecord").fields()
-        .name("cycle").type("cyclicRecord").noDefault()
-        .endRecord()),
+    assertNonDeterministic(
+        AvroCoder.of(
+            SchemaBuilder.record("cyclicRecord")
+                .fields()
+                .name("cycle")
+                .type("cyclicRecord")
+                .noDefault()
+                .endRecord()),
         reason("cyclicRecord.cycle", "cyclicRecord appears recursively"));
   }
 
   private static class NullableField {
     @SuppressWarnings("unused")
-    @Nullable private String nullable;
+    @Nullable
+    private String nullable;
   }
 
   @Test
@@ -836,30 +904,36 @@ public class AvroCoderTest {
 
   private static class NullableNonDeterministicField {
     @SuppressWarnings("unused")
-    @Nullable private NonDeterministicArray nullableNonDetArray;
+    @Nullable
+    private NonDeterministicArray nullableNonDetArray;
   }
 
   private static class NullableCyclic {
     @SuppressWarnings("unused")
-    @Nullable private NullableCyclic nullableNullableCyclicField;
+    @Nullable
+    private NullableCyclic nullableNullableCyclicField;
   }
 
   private static class NullableCyclicField {
     @SuppressWarnings("unused")
-    @Nullable private Cyclic nullableCyclicField;
+    @Nullable
+    private Cyclic nullableCyclicField;
   }
 
   @Test
   public void testNullableNonDeterministicField() {
-    assertNonDeterministic(AvroCoder.of(NullableCyclic.class),
-        reasonField(NullableCyclic.class, "nullableNullableCyclicField",
+    assertNonDeterministic(
+        AvroCoder.of(NullableCyclic.class),
+        reasonField(
+            NullableCyclic.class,
+            "nullableNullableCyclicField",
             NullableCyclic.class.getName() + " appears recursively"));
-    assertNonDeterministic(AvroCoder.of(NullableCyclicField.class),
-        reasonField(Cyclic.class, "cyclicField",
-            Cyclic.class.getName() + " appears recursively"));
-    assertNonDeterministic(AvroCoder.of(NullableNonDeterministicField.class),
-        reasonField(UnorderedMapClass.class, "mapField",
-            " may not be deterministically ordered"));
+    assertNonDeterministic(
+        AvroCoder.of(NullableCyclicField.class),
+        reasonField(Cyclic.class, "cyclicField", Cyclic.class.getName() + " appears recursively"));
+    assertNonDeterministic(
+        AvroCoder.of(NullableNonDeterministicField.class),
+        reasonField(UnorderedMapClass.class, "mapField", " may not be deterministically ordered"));
   }
 
   /**
@@ -873,7 +947,8 @@ public class AvroCoderTest {
     AvroCoder<GenericWithAnnotation<String>> coder =
         (AvroCoder) AvroCoder.of(GenericWithAnnotation.class);
 
-    assertThat(coder.getSchema().getField("onlySomeTypesAllowed").schema().getType(),
+    assertThat(
+        coder.getSchema().getField("onlySomeTypesAllowed").schema().getType(),
         equalTo(Schema.Type.UNION));
 
     CoderProperties.coderDecodeEncodeEqual(coder, new GenericWithAnnotation<>("hello"));
@@ -889,7 +964,7 @@ public class AvroCoderTest {
 
     // For deserialization only
     @SuppressWarnings("unused")
-    protected GenericWithAnnotation() { }
+    protected GenericWithAnnotation() {}
 
     @Override
     public boolean equals(Object other) {
@@ -906,18 +981,22 @@ public class AvroCoderTest {
   @Test
   public void testAvroCoderForGenerics() throws Exception {
     Schema fooSchema = AvroCoder.of(Foo.class).getSchema();
-    Schema schema = new Schema.Parser().parse("{"
-        + "\"type\":\"record\","
-        + "\"name\":\"SomeGeneric\","
-        + "\"namespace\":\"ns\","
-        + "\"fields\":["
-        + "  {\"name\":\"foo\", \"type\":" + fooSchema.toString() + "}"
-        + "]}");
+    Schema schema =
+        new Schema.Parser()
+            .parse(
+                "{"
+                    + "\"type\":\"record\","
+                    + "\"name\":\"SomeGeneric\","
+                    + "\"namespace\":\"ns\","
+                    + "\"fields\":["
+                    + "  {\"name\":\"foo\", \"type\":"
+                    + fooSchema.toString()
+                    + "}"
+                    + "]}");
     @SuppressWarnings("rawtypes")
     AvroCoder<SomeGeneric> coder = AvroCoder.of(SomeGeneric.class, schema);
 
-    assertNonDeterministic(coder,
-        reasonField(SomeGeneric.class, "foo", "erasure"));
+    assertNonDeterministic(coder, reasonField(SomeGeneric.class, "foo", "erasure"));
   }
 
   @Test
@@ -930,6 +1009,7 @@ public class AvroCoderTest {
     @SuppressWarnings("unused")
     private T foo;
   }
+
   private static class Foo {
     @SuppressWarnings("unused")
     String id;
